--- a/topic_1/test/index.html
+++ b/topic_1/test/index.html
@@ -313,7 +313,7 @@
             <li>
               <a>
                 <span class="icon"><i class="fa fa-copyright"></i></span>
-                Julia The White - 2021
+                Shuaib - 2022
               </a>
             </li>
           </ul>
